src/main/java/com/example/demo/error/ErrorDetails.java
package com.example.demo.error;

public class ErrorDetails {
}
